@@ -71,6 +71,18 @@ jar {
     }
 }
 
+compileJava {
+    doFirst {
+        options.compilerArgs = [
+                '--module-path', classpath.asPath,
+                '--add-modules', 'javafx.controls,javafx.fxml,javafx.graphics'
+        ]
+        println options.compilerArgs
+    }
+
+}
+
+
 test {
 	useJUnitPlatform()
 	testLogging {
